--- a/dentaku.html
+++ b/dentaku.html
@@ -13,6 +13,7 @@
     </p>
     <hr/>
     <button onclick="clearDisplay()">C</button>
+    <button onclick="backDisplay()">←</button>
     <br>
     <button onclick="appendToDisplay('1')">1</button>
     <button onclick="appendToDisplay('2')">2</button>
